correção após primeira avaliação

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/normalize.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Aprendendo a aprender</title>
   </head>
   <body>
@@ -128,7 +128,7 @@
         <section class="feynman">
           <h2 class="feynman__title">A Técnica de Feynman</h2>
           <h3 class="feynman__subtitle">Aprender sem esquecer</h3>
-          <a href="#" class="feynman__link">Mais →</a>
+          <a href="#" class="feynman__link">Mais &rarr;</a>
         </section>
 
         <section class="kaufman">
@@ -208,7 +208,7 @@
             <img
               class="logo footer__logo_place_footer"
               src="./images/logo_place_footer.png"
-              alt=""
+              alt="Practicum Logo rodapé"
             />
             <p class="footer__author">&copy; 2022 Felipe Emanuel</p>
           </div>
