--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/normalize.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./pages/index.css" />
     <title>Aprendendo a aprender</title>
   </head>
   <body>
@@ -21,7 +20,7 @@
             As técnicas de aprendizado mais eficazes que você pode aplicar ao
             seu cotidiano.
           </p>
-          <a href="#" class="header__link">Saiba mais</a>
+          <a href="#" class="header__link">Saiba mais &rarr;</a>
         </div>
         <img
           class="header__main-ilustration"
@@ -31,7 +30,7 @@
           enquanto também se questiona sobre de onde aquele quadrado
           azul gigante veio"
         />
-        <div class="header__square"></div>
+        <div class="header__square rotation"></div>
       </header>
       <main class="content">
         <section class="description">
@@ -66,7 +65,115 @@
             </div>
           </div>
         </section>
-
+        <section class="techniques">
+          <h2 class="section-title">Aprender Técnicas</h2>
+          <h3 class="section-subtitle">
+            As Cinco estratégias de Barbara Oakley
+          </h3>
+          <div class="cards">
+            <div class="cards__item">
+              <img
+                src="./images/images_sprint-2/cards-attention.png"
+                alt="imagem de um livro"
+                class="cards__image"
+              />
+              <h2 class="cards__title">As Duas Maneiras de Pensar</h2>
+              <p class="cards__description">
+                Uma compreensão profunda surge da capacidade de alternar entre o
+                pensamento difuso e o focado.
+              </p>
+            </div>
+            <div class="cards__item">
+              <img
+                src="./images/images_sprint-2/cards-recall.png"
+                alt="imagem de um livro"
+                class="cards__image"
+              />
+              <h2 class="cards__title">Recordar</h2>
+              <p class="cards__description">
+                Melhorar sua capacidade de para recordar pequenas informações
+                importantes ajuda a conectar diferentes partes do cérebro.
+              </p>
+            </div>
+            <div class="cards__item">
+              <img
+                src="./images/images_sprint-2/cards-interleaving.png"
+                alt="imagem de um livro"
+                class="cards__image"
+              />
+              <h2 class="cards__title">Intercalar</h2>
+              <p class="cards__description">
+                Quando você aprende diferentes habilidades ao mesmo tempo, elas
+                fortalecem umas às outras.
+              </p>
+            </div>
+            <div class="cards__item">
+              <img
+                src="./images/images_sprint-2/cards-question.png"
+                alt="imagem de um livro"
+                class="cards__image"
+              />
+              <h2 class="cards__title">Questões</h2>
+              <p class="cards__description">
+                Quando estiver escutando seu professor, pense em uma boa
+                pergunta, algo que você realmente gostaria de saber.
+              </p>
+            </div>
+            <div class="cards__item">
+              <img
+                src="./images/images_sprint-2/cards-competence.png"
+                alt="imagem de um livro"
+                class="cards__image"
+              />
+              <h2 class="cards__title">Ilusão da Competência</h2>
+              <p class="cards__description">
+                Teste a si mesmo, anote, fale com outra pessoa e repita o
+                processo de diferentes situações. Somente assim você vai ter
+                certeza de que entendeu alguma coisa.
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="video">
+          <h2 class="section-title">Conversas TED</h2>
+          <h3 class="section-subtitle">Para os amantes da procrastinação</h3>
+          <div class="video__iframes">
+            <iframe
+              src="https://www.youtube.com/embed/5MgBikgcWnY"
+              class="video__iframe"
+            ></iframe>
+            <iframe
+              src="https://www.youtube.com/embed/arj7oStGLkU"
+              class="video__iframe"
+            ></iframe>
+          </div>
+        </section>
+        <section class="oakley">
+          <div class="two-columns">
+            <h2 class="two-columns__brief">A história de Barbara Oakley</h2>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">
+                A matemática não veio naturalmente para Barbara na infância. Ela
+                se identificava mais com ciências humanas, e que não era muito
+                brilhante nisso. Com o objetivo de se especializar em
+                linguística, após terminar seus estudos, ela se alistou no
+                Exército, que a enviou para aprender russo. Após vários anos de
+                serviço, tornando-se capitã, Barbara deixou o Exército e decidiu
+                estudar engenharia. Foi nesta época que ela desenvolveu a
+                metodologia de aprendizagem, pois precisou reprogramar seu
+                cérebro para um tipo diferente de aprendizagem. Quando algo não
+                ocorre naturalmente, então é preciso trabalhar duro para obter o
+                conhecimento que outras pessoas podem obter rapidamente, dando
+                assim uma visão mais profunda e abrangente do assunto.
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="feynman">
+          <h2 class="feynman__title">A Técnica de Feynman</h2>
+          <h3 class="feynman__subtitle">Aprender sem esquecer</h3>
+          <a href="#" class="feynman__link">Mais &rarr;</a>
+        </section>
         <section class="digits">
           <h2 class="section-title">Fatos e números</h2>
           <h3 class="section-subtitle">Sobre o cérebro e o aprendizado</h3>
@@ -124,16 +231,32 @@
             </li>
           </ul>
         </section>
-
-        <section class="feynman">
-          <h2 class="feynman__title">A Técnica de Feynman</h2>
-          <h3 class="feynman__subtitle">Aprender sem esquecer</h3>
-          <a href="#" class="feynman__link">Mais &rarr;</a>
+        <section class="khan">
+          <div class="khan__container">
+            <h2 class="khan__author">Salman Khan</h2>
+            <h3 class="khan__title">The One World Schoolhouse</h3>
+            <p class="khan__quote">
+              A paixão e inovação de Sal Khan é transformar o aprendizado para
+              milhões de estudantes no mundo todo. O livro The One World
+              Schoolhouse é uma leitura obrigatória para quem quer melhorar a
+              educação e que os estudantes habilidades e conhecimentos
+              necessários na escola, na carreira, e na vida em geral.
+            </p>
+            <h4 class="khan__quote-author">George Lucas</h4>
+            <h4 class="khan__quote-author-subline">Diretor</h4>
+            <div class="khan__book-container">
+              <img
+                src="./images/images_sprint-2/khan-book-2.png"
+                alt="George Lucas khan book"
+                class="khan__book-pic"
+              />
+              <a href="#" class="khan__buy-link">Comprar &rarr;</a>
+            </div>
+          </div>
         </section>
-
         <section class="kaufman">
           <img
-            class="kaufman__triangle"
+            class="kaufman__triangle rotation"
             src="./images/kaufman-triangle.svg"
             alt="Um grande triângulo azul, sobre o qual Josh Kaufman reclama
           propriedade"
@@ -200,6 +323,42 @@
               </p>
             </li>
           </ul>
+        </section>
+        <section class="resources">
+          <h2 class="section-title">Recursos úteis</h2>
+          <h3 class="section-subtitle">
+            Material adicional sobre técnicas e hacks de aprendizagem.
+          </h3>
+          <div class="resources__logo-zone">
+            <a href="#">
+              <img
+                class="resources__logo"
+                src="./images/images_sprint-2/logo/resources-tedED.png"
+                alt="tedED logo link"
+              />
+            </a>
+            <a href="#">
+              <img
+                class="resources__logo"
+                src="./images/images_sprint-2/logo/resources-Medium.png"
+                alt="Medium logo link"
+              />
+            </a>
+            <a href="#">
+              <img
+                class="resources__logo"
+                src="./images/images_sprint-2/logo/resources-dezeen.png"
+                alt="dezeen logo link"
+              />
+            </a>
+            <a href="#">
+              <img
+                class="resources__logo"
+                src="./images/images_sprint-2/logo/resources-goodreads.png"
+                alt="goodreads logo link"
+              />
+            </a>
+          </div>
         </section>
       </main>
       <footer class="footer">
