--- a/index.html
+++ b/index.html
@@ -370,34 +370,42 @@
         </section>
       </main>
       <footer class="footer">
-        <div class="footer__columns">
-          <div class="footer__column_content_copyright">
+        <div class="footer__column footer__columns">
+          <div class="footer__column footer__column_content_copyright">
             <img
-              class="logo footer__logo_place_footer"
+              class="footer__logo footer__logo_place_footer"
               src="./images/logo_place_footer.png"
               alt="Practicum Logo rodapé"
             />
             <p class="footer__author">&copy; 2022 Felipe Emanuel</p>
           </div>
-          <div class="footer__column_content_about">
-            <h2 class="footer__column-heading">Sobre Practicum by Yandex</h2>
+          <div class="footer__column footer__column_content_about">
+            <h2 class="footer__column footer__column-heading">
+              Sobre Practicum by Yandex
+            </h2>
             <ul class="footer__list">
               <li>
-                <a href="#" class="footer__column-link"> Página Inicial </a>
+                <a href="#" class="footer__column footer__column-link">
+                  Página Inicial
+                </a>
               </li>
               <li>
-                <a href="#" class="footer__column-link"> Missão </a>
+                <a href="#" class="footer__column footer__column-link">
+                  Missão
+                </a>
               </li>
               <li>
-                <a href="#" class="footer__column-link"> Profissões </a>
+                <a href="#" class="footer__column footer__column-link">
+                  Profissões
+                </a>
               </li>
             </ul>
           </div>
-          <div class="footer__column_content_social">
-            <h2 class="footer__column-heading">Mídia social</h2>
+          <div class="footer__column footer__column_content_social">
+            <h2 class="footer__column footer__column-heading">Mídia social</h2>
             <ul class="footer__list">
               <li>
-                <a href="#" class="footer__column-link">
+                <a href="#" class="footer__column footer__column-link">
                   <img
                     class="footer__social-icons"
                     src="./images/facebook_white.svg"
@@ -407,7 +415,7 @@
                 </a>
               </li>
               <li>
-                <a href="#" class="footer__column-link">
+                <a href="#" class="footer__column footer__column-link">
                   <img
                     class="footer__social-icons"
                     src="./images/instagram_white.svg"
